--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/sequelize": "^10.0.1",
     "class-validator": "^0.14.1",
     "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.3",
@@ -42,6 +43,7 @@
     "@types/node": "^20.3.1",
     "@types/sequelize": "^4.28.20",
     "@types/supertest": "^6.0.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
