--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/sequelize": "^10.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "nodemailer": "^6.9.14",
+    "otp-generator": "^4.0.1",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.2.0",
